--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,19 +1,10 @@
-﻿@inherits LayoutComponentBase
+﻿<!-- MainLayout.razor -->
+@inherits LayoutComponentBase
+@using BouillonChanvre.Shared
 
-<PageTitle>BouillonChanvre</PageTitle>
-
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
+<div class="main-layout">
+    <NavMenu />
+    <div class="container">
+        @Body
     </div>
-
-    <main>
-        @* <div class="top-row px-4">
-        <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div> *@
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
 </div>
