--- a/Pages/Admin/ProductsCreateOrEdit.razor
+++ b/Pages/Admin/ProductsCreateOrEdit.razor
@@ -21,7 +21,7 @@
             CategoryId="@product.CategoryID" />
     }
 
-    @* <ProductVariantTabs Variants="@product.Variants" /> *@
+    <ProductVariantTabs Variants="@product.Variants" />
 
     <ValidationSummary />
     <button type="submit" class="btn btn-primary">Enregistrer le produit</button>
