--- a/Pages/_host.cshtml
+++ b/Pages/_host.cshtml
@@ -13,6 +13,8 @@
         <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
         <link href="css/site.css" rel="stylesheet" />
         <link href="_framework/blazor.server.js" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+        <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     </head>
 
     <body>
@@ -21,6 +23,7 @@
         </app>
 
         <script src="_framework/blazor.server.js"></script>
+        <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     </body>
 
 </html>
