--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,18 +1,6 @@
-<!-- NavMenu.razor -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">BouillonChanvre</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/">Recipes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/admin/products">Products</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<MudNavMenu>
+    <MudNavLink Href="/" Match="NavLinkMatch.All">Dashboard</MudNavLink>
+    <MudNavGroup Title="Produit" Expanded="true">
+        <MudNavLink Href="/admin/products" Match="NavLinkMatch.Prefix">Tous les produits</MudNavLink>
+    </MudNavGroup>
+</MudNavMenu>
